Fix compilation errors in Selenium DevTools test classes
Updated all DevTools test classes to use Selenium 4.41.0 v145 API:

- Fixed Network.enable() method calls to use 5 parameters instead of 3
- Fixed Network.setBlockedURLs() method signature
- Updated all Network method calls to use proper class prefix
- Replaced @Slf4j annotations with explicit logger declarations to fix Lombok processing issues
- Updated DevTools imports from v137 to v145
- Added maven-compiler-plugin configuration with Lombok annotation processor

Files modified:
- pom.xml: Added Lombok annotation processor configuration
- TestDevToolsNetwork.java: Fixed Network.enable() calls
- TestDevToolsNetworkInterception.java: Fixed static imports, Network methods, and logger
- TestDevToolsPerformance.java: Fixed Network.enable() calls
- TestDevToolsConsoleLogs.java: Added explicit logger
- TestDevToolsDeviceMode.java: Updated Emulation import from v137 to v145
- TestDevToolsGeolocation.java: Updated Emulation import from v137 to v145
- AccessibilityTest.java: Added explicit logger
- RegisterUsabilityTests.java: Added explicit logger
- ServerSideRenderingTest.java: Added explicit logger

All compilation errors (red) are now fixed. Only deprecation warnings remain.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>